<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robertogarcia.listviewdinamicjdbc.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvbtnclick"
        android:textAlignment="center"
        android:text="@string/tv_btnclick"/>

    <Button
        android:text="@string/lv_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLlproducts"
        android:layout_marginTop="133dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/empresa"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textSize="10sp"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:id="@+id/tvFooterMain"
        android:layout_height="38dp" />

</RelativeLayout>
