<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robertogarcia.listviewdinamicjdbc.ListViewProductsJDBC"
    android:weightSum="1">

    <!-- Linear Layout btn refresc -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lytRefresc">

        <Button
            android:text="@string/btn_refresc"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRefresc" />
    </LinearLayout>
    <!-- end Linear Layout btn refresc -->


    <!-- Linear Layout txt info products -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/lytInfoProducts">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_listview"
        android:ems="10"
        android:textSize="12sp"
        android:textStyle="bold"
        android:id="@+id/tvInfoList"
        android:layout_weight="1"
        android:gravity="center_horizontal" />
    </LinearLayout>
    <!-- end Linear Layout txt info products -->

    <!-- Linear Layout head products -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="70dp"
        android:id="@+id/lytHeadProducts"
        android:background="?attr/colorControlHighlight"
        android:alpha=".75">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight=".55">

            <TextView
                android:text="@string/tv_name"
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvheadName"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_weight=".45"
            android:weightSum="1">

            <TextView
                android:text="@string/tv_price"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:id="@+id/tvheadPrice"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />

            <TextView
                android:text="@string/tv_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:id="@+id/tvheadAmount"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />

            <TextView
                android:text="@string/tv_txt_active"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:id="@+id/tvheadActive"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>
    <!-- end Linear Layout head products -->

    <!-- Linear Layout list view products -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:id="@+id/lytListProducts">

        <ListView
            android:layout_width="match_parent"
            android:id="@+id/lwProducts"
            android:layout_height="340dp">
        </ListView>

    </LinearLayout>
    <!-- end Linear Layout list view products -->

    <!-- Linear Layout footer activity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/lytFooter">

        <TextView
            android:text="@string/empresa"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textSize="10sp"
            android:gravity="bottom"
            android:id="@+id/tvRooterList"
            android:layout_height="35dp" />

    </LinearLayout>
    <!-- end Linear Layout footer activity -->
</RelativeLayout>


